Commit 2 Data Description added
A concise data description of the dataset is added, providing information for the variables as well as the potential issues in the dataset.

--- a/Individual Plan.ipynb
+++ b/Individual Plan.ipynb
@@ -74,6 +74,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0b39fe2b-91a5-49c6-a7f6-8b73a4a32fbd",
+   "metadata": {},
+   "source": [
+    "The dataset **players.csv** provides information about players' personal identities, gaming experience and playtime. The dataset contains 196 observations and 7 variables.  \n",
+    "The variables are:\n",
+    "+ `experience`: a *character* variable representing the level of gaming experience of a player. It contains 5 categories: `Pro`,`Veteran`,`Amateur`,`Regular`,`Beginner`.\n",
+    "+ `subscribe`: a *logical* variable representing whether the player subscribe to a game-related newsletter. It contains 2 values: `TRUE` (subscribed), `FALSE` (not subscribed).\n",
+    "+ `hashedEmail`: a *character* variable representing a coded version of each player's email address.\n",
+    "+ `played_hours`: a *double* variable representing the number of hours each player spend in playing the game. It ranges from a minimum of 0.00 hours to a maximum of 223.10 hours, with a mean of 5.85 hours and a median of 0.10 hour.\n",
+    "+ `name`: a *character* variable representing the name of each player.\n",
+    "+ `gender`: a *character* variable representing the gender of each player. It contains 7 categories: `Male`,`Female`,`Non-binary`,`Prefer not to say`,`Agender`,`Two-Spirited`,`Other`.\n",
+    "+ `Age`: a *double* variable representing the age of each player. It ranges from a minimum of 9.00 years old to a maximum of 58.00 years old, with a mean of 21.14 years old and a median of 19.00 years old."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0724893-a78b-43fa-979c-603b2f740679",
+   "metadata": {},
+   "source": [
+    "**Potential Issue**:\n",
+    "+ The variables `hashedEmail` and `name` do not provide useful information for analysis.\n",
+    "+ If we want to use the variable `experience` as a predictor, we have to process it first, since it is a *character* variable.\n",
+    "+ In `gender` variable, the amounts of `Agender`,`Other` and `Two-Spirited` are relatively small compared to the ones of other categories, which may affect the result of analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1096f4d-545d-4511-8f60-abc3f9d302b7",
+   "metadata": {},
+   "source": [
+    "The dataset **sessions.csv** provides information about the time when a player start and end a session. The dataset contains 1535 observations and 5 variables.  \n",
+    "The variables are:\n",
+    "+ `hashedEmail`: a *character* variable representing a coded version of player's email address.\n",
+    "+ `start_time`: a *character* variable representing the time when a player starts a session in a human-readable format.\n",
+    "+ `end_time`: a *character* variable representing the time when a player ends a session in a human-readable format.\n",
+    "+ `original_start_time`: a *double* variable representing the time when a player starts a session in a machine-readable format.\n",
+    "+ `original_end_time`: a *double* variable representing the time when a player ends a session in a machine-readable format."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a63f473-92b2-4186-9928-b693e4ec7a38",
+   "metadata": {},
+   "source": [
+    "**Potential Issue**:\n",
+    "+ The variable `harshedEmail` do not provide useful information for analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "2adddde1-b027-4868-ac15-3982ab8d4bd0",
@@ -245,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "4253b969-4c5e-405a-b5f6-ac4a9e0c1f7b",
    "metadata": {},
    "outputs": [
@@ -397,6 +447,70 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 7 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>gender</th><th scope=col>count</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Agender          </td><td>  2</td></tr>\n",
+       "\t<tr><td>Female           </td><td> 37</td></tr>\n",
+       "\t<tr><td>Male             </td><td>124</td></tr>\n",
+       "\t<tr><td>Non-binary       </td><td> 15</td></tr>\n",
+       "\t<tr><td>Other            </td><td>  1</td></tr>\n",
+       "\t<tr><td>Prefer not to say</td><td> 11</td></tr>\n",
+       "\t<tr><td>Two-Spirited     </td><td>  6</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 7 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " gender & count\\\\\n",
+       " <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Agender           &   2\\\\\n",
+       "\t Female            &  37\\\\\n",
+       "\t Male              & 124\\\\\n",
+       "\t Non-binary        &  15\\\\\n",
+       "\t Other             &   1\\\\\n",
+       "\t Prefer not to say &  11\\\\\n",
+       "\t Two-Spirited      &   6\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 7 × 2\n",
+       "\n",
+       "| gender &lt;chr&gt; | count &lt;int&gt; |\n",
+       "|---|---|\n",
+       "| Agender           |   2 |\n",
+       "| Female            |  37 |\n",
+       "| Male              | 124 |\n",
+       "| Non-binary        |  15 |\n",
+       "| Other             |   1 |\n",
+       "| Prefer not to say |  11 |\n",
+       "| Two-Spirited      |   6 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  gender            count\n",
+       "1 Agender             2  \n",
+       "2 Female             37  \n",
+       "3 Male              124  \n",
+       "4 Non-binary         15  \n",
+       "5 Other               1  \n",
+       "6 Prefer not to say  11  \n",
+       "7 Two-Spirited        6  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -405,13 +519,16 @@
     "unique(players$gender)\n",
     "players |>\n",
     "summarize(max(played_hours), min(played_hours), mean(played_hours), median(played_hours), \n",
-    "          max(Age, na.rm = TRUE), min(Age, na.rm = TRUE), mean(Age, na.rm = TRUE), median(Age, na.rm = TRUE))"
+    "          max(Age, na.rm = TRUE), min(Age, na.rm = TRUE), mean(Age, na.rm = TRUE), median(Age, na.rm = TRUE))\n",
+    "players |>\n",
+    "group_by(gender) |>\n",
+    "summarize(count = n())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f0c6682-a7d3-4806-aad9-5f1ac7a93c73",
+   "id": "ad2101ac-506e-47fb-9e53-81eae0e0f43e",
    "metadata": {},
    "outputs": [],
    "source": []
