Commit 3 Question Section added
Add the broad question I will address, the specific question I will address and how I plan to wrangle the dataset.

--- a/Individual Plan.ipynb
+++ b/Individual Plan.ipynb
@@ -526,9 +526,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b9d7a3f-a1c7-4e90-9b2f-b9979fa9b32e",
+   "metadata": {},
+   "source": [
+    "## Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34dae839-52c2-414a-b64f-dd781e28b952",
+   "metadata": {},
+   "source": [
+    "**Borad Question**:\n",
+    "**Question 1**: What player characteristics and behaviours are most predictive of subscribing to a game-related newsletter, and how do these features differ between various player types?  \n",
+    "**Specific Question**: Can factors such as `experience`,`played_hours`,`gender` and `Age` predict whether a player has subscribe to a game-related newsletter or not in dataset `players.csv`?  \n",
+    "\n",
+    "The dataset `players.csv` contains the explanatory variables (`experience`,`played_hours`,`gender`,`Age`) and the response variable (`subscribe`) that helps to answer the question of interest. In order to prepare for data analysis, I will first convert the variables `experience` and `gender` into factor or numerical variables, so they can be used to predict the response variable using KNN classification algorithm. In addition, I will remove `harshedEmail` column and `name` column from the dataset, as they do not provide meaningful information for the question. Last, I will scale and center the data to remain the accuracy of the prediction."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad2101ac-506e-47fb-9e53-81eae0e0f43e",
+   "id": "01606842-81f5-4cbe-bd0f-b40249133a7f",
    "metadata": {},
    "outputs": [],
    "source": []
