Commit 5 Methods and Plan Added
Add the method and plan that I will take to analyze the data. Make small changes in previous sections.

--- a/Individual Plan.ipynb
+++ b/Individual Plan.ipynb
@@ -22,15 +22,15 @@
    "id": "0b39fe2b-91a5-49c6-a7f6-8b73a4a32fbd",
    "metadata": {},
    "source": [
-    "The dataset **players.csv** provides information about players' personal identities, gaming experience and playtime. The dataset contains 196 observations and 7 variables.  \n",
+    "The dataset **players.csv** contains 196 observations and 7 variables.  \n",
     "The variables are:\n",
     "+ `experience`: a *character* variable representing the level of gaming experience of a player. It contains 5 categories: `Pro`,`Veteran`,`Amateur`,`Regular`,`Beginner`.\n",
     "+ `subscribe`: a *logical* variable representing whether the player subscribe to a game-related newsletter. It contains 2 values: `TRUE` (subscribed), `FALSE` (not subscribed).\n",
     "+ `hashedEmail`: a *character* variable representing a coded version of each player's email address.\n",
-    "+ `played_hours`: a *double* variable representing the number of hours each player spend in playing the game. It ranges from a minimum of 0.00 hours to a maximum of 223.10 hours, with a mean of 5.85 hours and a median of 0.10 hour.\n",
+    "+ `played_hours`: a *double* variable representing the number of hours each player spend in playing the game. It ranges from a minimum of 0.00 hours to a maximum of 223.10 hours.\n",
     "+ `name`: a *character* variable representing the name of each player.\n",
     "+ `gender`: a *character* variable representing the gender of each player. It contains 7 categories: `Male`,`Female`,`Non-binary`,`Prefer not to say`,`Agender`,`Two-Spirited`,`Other`.\n",
-    "+ `Age`: a *double* variable representing the age of each player. It ranges from a minimum of 9.00 years old to a maximum of 58.00 years old, with a mean of 21.14 years old and a median of 19.00 years old."
+    "+ `Age`: a *double* variable representing the age of each player. It ranges from a minimum of 9.00 years old to a maximum of 58.00 years old."
    ]
   },
   {
@@ -49,7 +49,7 @@
    "id": "b1096f4d-545d-4511-8f60-abc3f9d302b7",
    "metadata": {},
    "source": [
-    "The dataset **sessions.csv** provides information about the time when a player start and end a session. The dataset contains 1535 observations and 5 variables.  \n",
+    "The dataset **sessions.csv** contains 1535 observations and 5 variables.  \n",
     "The variables are:\n",
     "+ `hashedEmail`: a *character* variable representing a coded version of player's email address.\n",
     "+ `start_time`: a *character* variable representing the time when a player starts a session in a human-readable format.\n",
@@ -1971,8 +1971,35 @@
    "id": "ffce9885-62f6-4082-af4c-744702363be8",
    "metadata": {},
    "source": [
-    "From the plot, it is evident that among all age groups, there are players who subscribe and players who do not subscribe, which indicates that age is not a major variable that helps to predict the subscribe status. In contrast, pla"
+    "From the plot, it is evident that among all age groups, there are players who subscribe and players who do not subscribe, which indicates that age is not a major variable that helps to predict the subscribe status. In contrast, players with a greater amount of time spend playing games are more likely to subscribe, which indicates that played hour is a major variable that helps to predict the subscription."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f64ed039-b961-4fcb-935b-00d74cd4405f",
+   "metadata": {},
+   "source": [
+    "## Methods and Plan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1de034ca-753e-44eb-b6e3-ef121003b299",
+   "metadata": {},
+   "source": [
+    "In order to address my question of interest, I will use **KNN Classification** to predict the subscription status. KNN Classification is suitable because it uses one or more quantitative variables to predict a categorical variable. Since the response variable, `subscribe`, is categorical, then KNN classification can be used to solve problem.  \n",
+    "In order to apply KNN classification, I will convert `experience` into numerical variable as KNN classification only makes prediction based on quantitative variables. One way to process `experience` is to turn categories in `experience` columns into numbers. For example, we can assign 5 to \"Pro\", 4 to \"Veteran\", 3 to \"Amateur\", 2 to \"Regular\" and 1 to \"Beginner\".  \n",
+    "However, the method may have some limitations. KNN classification becomes very slow when computing large dataset. In addition, assigning numbers to categories in `experience` assume the difference between each experience level is the same(e.g. the gap between \"Pro\" and \"Veteran\" is the same as the gap between \"Amateur\" and \"Regular\"), which may not be true and can potentially affect the analysis.  \n",
+    "I will first split the dataset into 75% for training and 25% for testing. Then, I will use **cross validation** and **tune the classifier**, comparing the accuracy of the classifier for different K values and find the value of K that provide best accuracy. After that, I will apply the best K value for the classifier and check classifier's accuracy on the test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f944103d-c017-4780-b1d6-388fac949fff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
